--- a/styles/general/About.module.css
+++ b/styles/general/About.module.css
@@ -4,6 +4,8 @@
   align-items: center;
   height: calc(100vh - 123px);
   width: 100vw;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 @media only screen and (max-width: 975px) {
